<resources>
    <string name="app_name">PocketAlbum</string>
    <string name="map">Map</string>
    <string name="share">Share</string>
    <string name="info">Info</string>
    <string name="close">Close</string>
    <string name="file_name">File name</string>
    <string name="location">Location</string>
    <string name="dimensions">Dimensions</string>
    <string name="original_size">Original size</string>
    <string name="importDescription">To import an existing album, select the file ending with .sqlite and press Import.</string>
    <string name="import_action">Import</string>
    <string name="album_import">Album import</string>
    <string name="select_file">Select file</string>
    <string name="importing">Importing ...</string>
    <string name="invalid_database_format">File is not a valid Pocket Album</string>
    <string name="open_file_failed">Unable to access the selected file\n</string>
    <string name="unknown_error">Unknown error</string>
    <string name="error_file_empty">Selected file is empty</string>
    <string name="no_file_selected">No file selected</string>
    <string name="search">Search</string>
    <string name="albums">Albums</string>
    <string name="settings">Settings</string>
    <string name="year">Year</string>
    <string name="part_of_day">Part of day</string>
    <string name="morning">Morning</string>
    <string name="day">Day</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="location_map">Location</string>
    <string name="zoom_in_message">Zoom in more to filter by location</string>
    <string name="display_theme">Display theme</string>
    <string name="thumbnails_size">Thumbnails size</string>
    <string name="photos_count">Photos count</string>
    <string name="file_size">File size</string>
    <string name="year_range">Year range</string>
    <string name="last_updated">Last updated</string>
    <string name="created">Created</string>
    <string name="compressed_size">Compressed size</string>
    <string name="cast">Cast</string>
    <string name="add_new_album">Add new album</string>
</resources>