<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lltPartOfDay"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/btnMorning"
        style="@style/ButtonSecondary.Small"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/morning"
        android:src="@drawable/weather_sunset_up"
        android:layout_margin="2dp"/>

    <ImageButton
        android:id="@+id/btnDay"
        style="@style/ButtonSecondary.Small"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/day"
        android:src="@drawable/weather_sunny"
        android:layout_margin="2dp"/>

    <ImageButton
        android:id="@+id/btnEvening"
        style="@style/ButtonSecondary.Small"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/evening"
        android:src="@drawable/weather_sunset_down"
        android:layout_margin="2dp"/>

    <ImageButton
        android:id="@+id/btnNight"
        style="@style/ButtonSecondary.Small"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/night"
        android:src="@drawable/weather_night"
        android:layout_margin="2dp"/>
</LinearLayout>