<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lltPartOfDay"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/btnAuto"
        style="@style/ButtonSecondary.Small"
        android:layout_width="@dimen/button_small"
        android:layout_height="@dimen/button_small"
        android:contentDescription="@string/morning"
        android:src="@drawable/brightness_auto"
        android:layout_margin="2dp"/>

    <ImageButton
        android:id="@+id/btnLight"
        style="@style/ButtonSecondary.Small"
        android:layout_width="@dimen/button_small"
        android:layout_height="@dimen/button_small"
        android:contentDescription="@string/day"
        android:src="@drawable/weather_sunny"
        android:layout_margin="2dp"/>

    <ImageButton
        android:id="@+id/btnDark"
        style="@style/ButtonSecondary.Small"
        android:layout_width="@dimen/button_small"
        android:layout_height="@dimen/button_small"
        android:contentDescription="@string/night"
        android:src="@drawable/weather_night"
        android:layout_margin="2dp"/>
</LinearLayout>