<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ActivityRoot"
    android:id="@+id/pnlRoot">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album_import"
        style="@style/ActivityTitle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/importDescription"
        style="@style/ActivityText"
        android:layout_marginVertical="20dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ProgressBar
            android:id="@+id/prgImport"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="?android:attr/progressBarStyleHorizontal"
            android:progressDrawable="@drawable/progress_bar"
            android:max="1000"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <si.pocketalbum.view.AlbumView
                android:id="@+id/albumView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnSelectFile"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/background_red"
                style="@style/ButtonPrimary"
                android:text="@string/select_file" />
        </LinearLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/lblError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:paddingHorizontal="40dp"
        android:textAlignment="center"
        style="@style/TextWarning"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/btnImport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_red"
        style="@style/ButtonPrimary"
        android:layout_marginVertical="20dp"
        android:text="@string/import_action"
        android:enabled="false"/>

</LinearLayout>