<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_blue_bottom"
    android:padding="5dp">
    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/image_album"
        android:tint="@color/white"
        android:layout_marginVertical="12dp"
        android:layout_marginHorizontal="5dp"/>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:id="@+id/lblName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_column="0"
            android:layout_row="1"
            style="@style/ActivityTitle"/>

        <TextView
            android:id="@+id/lblDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_column="0"
            android:layout_row="2"
            style="@style/ActivityText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:paddingVertical="8dp"
            style="@style/ActivitySubtext"
            android:text="@string/photos_count" />

        <TextView
            android:id="@+id/lblPhotos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:layout_gravity="end"
            style="@style/ActivityText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:paddingVertical="8dp"
            style="@style/ActivitySubtext"
            android:text="@string/file_size" />

        <TextView
            android:id="@+id/lblSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="4"
            android:layout_gravity="end"
            style="@style/ActivityText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="5"
            style="@style/ActivitySubtext"
            android:paddingVertical="8dp"
            android:text="@string/year_range" />

        <TextView
            android:id="@+id/lblYearRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="5"
            android:layout_gravity="end"
            style="@style/ActivityText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="6"
            android:paddingVertical="8dp"
            style="@style/ActivitySubtext"
            android:text="@string/created" />

        <TextView
            android:id="@+id/lblCreated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="6"
            android:layout_gravity="end"
            style="@style/ActivityText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="7"
            android:paddingVertical="8dp"
            style="@style/ActivitySubtext"
            android:text="@string/last_updated" />

        <TextView
            android:id="@+id/lblUpdated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="7"
            android:layout_gravity="end"
            style="@style/ActivityText"/>

    </GridLayout>
</LinearLayout>