<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpgImages"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"/>

    <LinearLayout
        android:id="@+id/lltDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        android:padding="5dp"
        style="@style/ImageTools">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="@dimen/button_large"
            android:layout_height="@dimen/button_large"
            android:src="@drawable/arrow_back_24"
            android:background="@color/transparent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">
            <TextView
                android:id="@+id/lblDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ImageTools.Label"/>
            <TextView
                android:id="@+id/lblCoordinates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ImageTools"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lltActions"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible">
        <Button
            android:id="@+id/btnMap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="10dp"
            style="@style/ImageTools"
            android:text="@string/map"
            />
        <Button
            android:id="@+id/btnShare"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="10dp"
            style="@style/ImageTools"
            android:text="@string/share"
            />
        <Button
            android:id="@+id/btnInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="10dp"
            style="@style/ImageTools"
            android:text="@string/info"
            />
    </LinearLayout>
</FrameLayout>